아코디언 텍스트 복사 기능 추가, textarea 크기 조절 핸들 제거

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
              <div class="guestbook-form">
                 <div class="form-row">
                     <input type="text" id="guest-name" placeholder="이름" class="form-input">
-                    <input type="password" id="guest-password" placeholder="비밀번호" class="form-input">
+                    <!-- <input type="password" id="guest-password" placeholder="비밀번호" class="form-input"> -->
                 </div>
                 <textarea id="guest-message" placeholder="축하 메시지를 남겨주세요" class="form-textarea"></textarea>
                 <button id="submit-guestbook" class="form-button">글 남기기</button>
